--- a/index.html
+++ b/index.html
@@ -36,8 +36,18 @@
   <div class="box"></div>
 </div>
 </div>
+
 <div class="btn">
+  <div class="rec2">
+    <div class="rec1"></div>
+    <div class="rec1"></div>
+  </div>
   <button class="button">CREATE MY WEBSITE</button>
+<div class="rec2">
+  <div class="rec1"></div>
+  <div class="rec1"></div>
+</div>
+
 </div>
 </body>
 </html>
