--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Lato&family=Montserrat:wght@400;700&family=Mulish&family=Playfair+Display&family=Roboto&family=Rochester&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.scc/styles.css"><title>HW#8</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
   <div class="box"></div>
   <div class="box"></div>
   <div class="box"></div>
-  <div class="box"></div>
+  <div class="box"></div>t
   <div class="box"></div>
   <div class="box"></div>
   <div class="box"></div>
