--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="box"></div>
   <div class="box"></div>
   <div class="box"></div>
-  <div class="box"></div>t
+  <div class="box"></div>
   <div class="box"></div>
   <div class="box"></div>
   <div class="box"></div>
